--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -11,7 +11,14 @@ body {
     "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
 } */
-
+/* 添加到全局样式文件中 */
+html, body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden; /* 防止出现滚动条 */
+  }
 @font-face {
     font-family: "Nunito";
     font-style: normal;
@@ -21,6 +28,7 @@ body {
 }
 
 #app {
-    height: 100vh;
-    text-align: center;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
 }
