--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,5 +1,5 @@
-/* html {
-    background-color: rgba(27, 38, 54, 1);
+html {
+    background-color: rgba(255, 255, 255, 0);
     text-align: center;
     color: white;
 }
@@ -10,7 +10,7 @@ body {
     font-family: "Nunito", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
     "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
-} */
+}
 /* 添加到全局样式文件中 */
 html, body {
     margin: 0;
